--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "gulp": "^3.9.0",
     "gulp-eslint": "^2.0.0",
     "lodash": "2.4.1",
-    "mocha": "1.21.4",
+    "mocha": "1.21.4"
+  },
+  "scripts": {
+    "start": "gulp && node index.js"
   }
 }
